# sadmadbotlad

./: .gitignore  Cargo.toml  Cargo.toml.bak  Makefile.toml  README.md  a  flake.nix  idk.diff  rules.txt  ws_tester.py
frontend/: .envrc  .gitignore  Cargo.toml  index.html  styles.css  ws_tester.py
frontend/assets/: asd.webm  cheer.webm  raid-1.webm  raid.webm  sub.webm  صلاتك ع نبي_1.webm
frontend/server/: Cargo.toml
frontend/server/src/: main.rs
frontend/src/: activity_feed.rs  alerts.rs  code.rs  heat.rs  lib.rs  main.rs  songs.rs
frontend/src/components/: alert.rs  event.rs  mod.rs  replay.rs  song.rs
sadmadbotlad/: .gitignore  Cargo.toml  auth_link.txt  current_spotify_song.sh  flake.nix  pause_spotify.sh  play_spotify.sh  rust_warranty.txt  shell.nix  warranty.txt  ws_tester.py
sadmadbotlad/commands/: 7tv.hebi  currentsp+currentspotify.hebi  discord+دسكورد.hebi  nerd.hebi  ping.hebi  pixelperfect+pp.hebi  play+ابدا+بدء.hebi  queue+q+السرا+سرا.hebi  rules+قوانين.hebi  rustwarranty+rwarranty.hebi  skip.hebi  song+currentsong+الاغنية+الاغنية-الحالية.hebi  sr+طلب.hebi  stop+pause+قف+وقف.hebi  test.hebi  title+عنوان.hebi  title.hebi  volume+v.hebi  warranty+تأمين.hebi  working_on+wo.hebi  وكز.hebi
sadmadbotlad/scripts/: playpause_spotify.sh
sadmadbotlad/src/: commands.rs  db.rs  dependencies_handler.rs  discord.rs  event_handler.rs  eventsub.rs  irc.rs  lib.rs  main.rs  obs_websocket.rs  song_requests.rs  sr_ws_server.rs  twitch.rs  ws_server.rs  youtube.rs
sadmadbotlad/src/commands/: alert_test.rs  commercial_break.rs  current_song.rs  current_song_spotify.rs  database.rs  discord.rs  get_title.rs  get_volume.rs  invalid.rs  mod.rs  mods_only.rs  nerd.rs  ping.rs  pixel_perfect.rs  play.rs  play_spotify.rs  queue.rs  rules.rs  rust_warranty.rs  set_title.rs  set_volume.rs  seventv.rs  skip_sr.rs  sr.rs  stop.rs  stop_spotify.rs  vote_skip.rs  warranty.rs  working_on.rs
src/: discord.rs  event_handler.rs  eventsub.rs  irc.rs  lib.rs  main.rs  song_requests.rs  twitch.rs  util.rs  ws_server.rs  youtube.rs
src/alerts/: mod.rs
