[package]
name = "sadmadbotlad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
twitch_api = { version = "0.7.0-rc.2", features = ["reqwest", "helix", "eventsub", "hmac"] }
eyre = { version = "0.6" }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
futures-util = "0.3.25"
envy = "0.4.2"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
serde_json = "1.0.87"
chrono = "0.4.23"
