[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
futures = "0.3.25"
futures-util = "0.3.25"
gloo = "0.8.0"
gloo-net = "0.2.5"
js-sys = "0.3.60"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew_icons = { version = "0.7.0", features = ["font_awesome_solid"] }
