[package]
name = "sadmadbotlad"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
eyre = "0.6"
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
futures-util = "0.3.25"
envy = "0.4.2"
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"]}
serde_json = "1.0.87"
chrono = "0.4.39"
# libmpv = 2.0.1
# fork from `libmpv` that supports mpv v0.35.0
libmpv-sirno = "2.0.2-fork.1"
libmpv-sys = "3.0.1"
percent-encoding = "2.2.0"
tokio-retry = "0.3.0"
html-escape = "0.2.12"
toml = "0.5.10"
obws = { version = "0.14.0", features = ["events"] }
surrealdb = { version = "2.2.1", default-features = false, features = ["kv-rocksdb"] }
open = "5"
lazy_static = "1.4.0"
async-trait = "0.1.62"
urlencoding = "2.1.2"
rand = "0.8.5"
hebi = { git = "https://github.com/jprochazk/hebi", branch = "v2"}
thiserror = "1.0.40"
notify = "6.0.0"
futures = "0.3.28"
xflags = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
dirs = "5.0.1"
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
